refactor: response model
