# docs/swagger.json
@@ -34,10 +34,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/entities.Channel"
-                            }
+                            "$ref": "#/definitions/handlers.ChannelsResponse"
                         }
                     }
                 }
@@ -121,10 +118,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/entities.Song"
-                            }
+                            "$ref": "#/definitions/handlers.VideosResponse"
                         }
                     }
                 }
@@ -193,21 +187,43 @@
         }
     },
     "definitions": {
-        "entities.Channel": {
+        "handlers.ChannelsResponse": {
+            "type": "object",
+            "properties": {
+                "channels": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/mappers.ChannelResponse"
+                    }
+                }
+            }
+        },
+        "handlers.VideosResponse": {
+            "type": "object",
+            "properties": {
+                "videos": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/mappers.VideoResponse"
+                    }
+                }
+            }
+        },
+        "mappers.ChannelResponse": {
             "type": "object",
             "properties": {
                 "id": {
                     "type": "string"
                 },
                 "snippet": {
-                    "$ref": "#/definitions/entities.ChannelSnippet"
+                    "$ref": "#/definitions/mappers.ChannelSnippetResponse"
                 },
                 "statistics": {
-                    "$ref": "#/definitions/entities.ChannelStatistics"
+                    "$ref": "#/definitions/mappers.ChannelStatisticsResponse"
                 }
             }
         },
-        "entities.ChannelSnippet": {
+        "mappers.ChannelSnippetResponse": {
             "type": "object",
             "properties": {
                 "customUrl": {
@@ -220,14 +236,14 @@
                     "type": "string"
                 },
                 "thumbnails": {
-                    "$ref": "#/definitions/entities.Thumbnails"
+                    "$ref": "#/definitions/mappers.ThumbnailsResponse"
                 },
                 "title": {
                     "type": "string"
                 }
             }
         },
-        "entities.ChannelStatistics": {
+        "mappers.ChannelStatisticsResponse": {
             "type": "object",
             "properties": {
                 "hiddenSubscriberCount": {
@@ -244,7 +260,41 @@
                 }
             }
         },
-        "entities.Song": {
+        "mappers.ThumbnailResponse": {
+            "type": "object",
+            "properties": {
+                "height": {
+                    "type": "integer"
+                },
+                "url": {
+                    "type": "string"
+                },
+                "width": {
+                    "type": "integer"
+                }
+            }
+        },
+        "mappers.ThumbnailsResponse": {
+            "type": "object",
+            "properties": {
+                "default": {
+                    "$ref": "#/definitions/mappers.ThumbnailResponse"
+                },
+                "high": {
+                    "$ref": "#/definitions/mappers.ThumbnailResponse"
+                },
+                "maxres": {
+                    "$ref": "#/definitions/mappers.ThumbnailResponse"
+                },
+                "medium": {
+                    "$ref": "#/definitions/mappers.ThumbnailResponse"
+                },
+                "standard": {
+                    "$ref": "#/definitions/mappers.ThumbnailResponse"
+                }
+            }
+        },
+        "mappers.VideoResponse": {
             "type": "object",
             "properties": {
                 "channelId": {
@@ -269,51 +319,17 @@
                     }
                 },
                 "thumbnails": {
-                    "$ref": "#/definitions/entities.Thumbnails"
+                    "$ref": "#/definitions/mappers.ThumbnailsResponse"
                 },
                 "title": {
                     "type": "string"
                 },
                 "viewCount": {
-                    "$ref": "#/definitions/entities.Views"
+                    "$ref": "#/definitions/mappers.ViewsResponse"
                 }
             }
         },
-        "entities.Thumbnail": {
-            "type": "object",
-            "properties": {
-                "height": {
-                    "type": "integer"
-                },
-                "url": {
-                    "type": "string"
-                },
-                "width": {
-                    "type": "integer"
-                }
-            }
-        },
-        "entities.Thumbnails": {
-            "type": "object",
-            "properties": {
-                "default": {
-                    "$ref": "#/definitions/entities.Thumbnail"
-                },
-                "high": {
-                    "$ref": "#/definitions/entities.Thumbnail"
-                },
-                "maxres": {
-                    "$ref": "#/definitions/entities.Thumbnail"
-                },
-                "medium": {
-                    "$ref": "#/definitions/entities.Thumbnail"
-                },
-                "standard": {
-                    "$ref": "#/definitions/entities.Thumbnail"
-                }
-            }
-        },
-        "entities.Views": {
+        "mappers.ViewsResponse": {
             "type": "object",
             "properties": {
                 "daily": {
